--- a/tasks/templates/signin.html
+++ b/tasks/templates/signin.html
@@ -12,7 +12,7 @@
     <main class="container">
         <div class="row">
             <section class="col-md-4 offset-md-4 mt-5">
-                <form action="/signin/" method="post" class="card card-body">
+                <form action="/signin/" method="post" class="card card-body" enctype="multipart/form-data">
                     {% csrf_token %}
                     <h1 class="text-center">Iniciar Sesión</h1>
                     {{error}}
