--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -18,10 +18,13 @@
                 <li class="nav-item">
                     <a href="/" class="nav-link active">Home</a>
                 </li>
+                <li class="nav-item">
+                    <a href="{% url 'AcercaDe' %}" class="nav-link active">Acerca de mi</a>
+                </li>
 
                 {% if user.is_authenticated %}
 
-                    <a href="{% url 'EditarPerfil' %}" >Hola {{user.username}}</a>
+                <a href="{% url 'EditarPerfil' %}">Hola {{user.username}}</a>
                 <img src="{{user.avatar_set.first.imagen.url}}" alt="La img no se pudo cargar" width="50px"
                      height="50px" style="border-radius: 50px">
 
@@ -51,8 +54,10 @@
 </nav>
 
 
-    {% block content %}
-    {% endblock %}
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+{% block content %}
+{% endblock %}
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 </html>
