--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -1,33 +1,37 @@
 {% extends 'base.html' %}
 
-{% block title %}Tareas| Pendientes{% endblock %}
+{% block title %}Tareas Pendientes{% endblock %}
 
 {% block content %}
-
 <main class="container">
     <div class="row">
         <div class="col-md-6 offset-md-3">
             <h1 class="text-center display-3 py-5">Tareas Pendientes</h1>
-            <ul class="list-group">
-                {% for task in tasks %}
-                <a class="list-group-item" href="{% url 'task_detail' task.id %}">
-                    <header class="d-flex justify-content-between">
-                        {% if task.important %}
-                        <h1 class="fw-bold text-success">{{ task.titulo }}</h1>
-                        {% else %}
-                        <h1 class="fw-bold">{{ task.titulo }}</h1>
-                        {% endif %}
-                        <p>{{ task.user.username }}</p>
-                    </header>
-                    <p>{{ task.descripcion }}</p>
-
-                    <p>{{ task.fecha_completada|date:"M j Y:i" }}</p>
-                </a>
-                {% endfor %}
-            </ul>
+            <form method="GET" action="{% url 'tasks' %}">
+                <input type="text" name="q" placeholder="Buscar por título">
+                <button type="submit">Buscar</button>
+            </form>
+            {% if message %}
+                <p>{{ message }}</p>
+            {% else %}
+                <ul class="list-group">
+                    {% for task in tasks %}
+                    <a class="list-group-item" href="{% url 'task_detail' task.id %}">
+                        <header class="d-flex justify-content-between">
+                            {% if task.important %}
+                                <h1 class="fw-bold text-success">{{ task.titulo }}</h1>
+                            {% else %}
+                                <h1 class="fw-bold">{{ task.titulo }}</h1>
+                            {% endif %}
+                            <p>{{ task.user.username }}</p>
+                        </header>
+                        <p>{{ task.descripcion }}</p>
+                        <p>{{ task.fecha_completada|date:"M j Y:i" }}</p>
+                    </a>
+                    {% endfor %}
+                </ul>
+            {% endif %}
         </div>
     </div>
-
 </main>
-
 {% endblock %}
