Se agrega img para acerca de

--- a/tasks/templates/acerca_de.html
+++ b/tasks/templates/acerca_de.html
@@ -13,11 +13,12 @@
         <div class="col-md-6 offset-md-3">
             <h1 class="text-center display-3 py-5">Acerca de Mi</h1>
             <div class="text-center">
-                <img src="{% static 'ruta/de/la/imagen.jpg' %}" alt="Mi imagen">
+                <img src="{% static 'banner_task_list' %}" alt="Mi imagen">
             </div>
             <p>
                 Aquí puedes escribir un texto explicando sobre ti.
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ac magna a dui posuere sodales ut sit amet magna.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ac magna a dui posuere sodales ut sit
+                amet magna.
             </p>
         </div>
     </div>
