--- a/tasks/templates/acerca_de.html
+++ b/tasks/templates/acerca_de.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Acerca de Mi</title>
-</head>
-<body>
 {% extends 'base.html' %}
 {% block title %}Acerca de Mi{% endblock %}
 {% block content %}
@@ -13,18 +6,13 @@
         <div class="col-md-6 offset-md-3">
             <h1 class="text-center display-3 py-5">Acerca de Mi</h1>
             <div class="text-center">
-                <img src="{% static 'banner_task_list' %}" alt="Mi imagen">
+                <img src="{% static 'banner.jpg' %}" alt="Banner Acerca de">
             </div>
             <p>
                 Aquí puedes escribir un texto explicando sobre ti.
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ac magna a dui posuere sodales ut sit
-                amet magna.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ac magna a dui posuere sodales ut sit amet magna.
             </p>
         </div>
     </div>
 </main>
 {% endblock %}
-
-
-</body>
-</html>
